unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Vehicle_Purchase_price__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Purchase_price__c</fullName>
    <label>Vehicle Purchase price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>