unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Vehicle_Repairs_and_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Repairs_and_Maintenance__c</fullName>
    <label>Vehicle Repairs and Maintenance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>