unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Vehicle_Source__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Source__c</fullName>
    <label>Proposal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main</fullName>
            </value>
            <value>
                <fullName>optional</fullName>
            </value>
            <value>
                <fullName>Substitutional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>