unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Vehicle_Total_Investment__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Total_Investment__c</fullName>
    <label>Vehicle Total Investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>