unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Working_Capital__c.field-meta.xml
<CustomField>
    <fullName>Working_Capital__c</fullName>
    <formula>(0.0226* Financial_Analysis__r.Working_Capital__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Working Capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>