unpackaged/main/default/objects/Customer_Vehicle_Quote_Item__c/fields/Working_days_per_week__c.field-meta.xml
<CustomField>
    <fullName>Working_days_per_week__c</fullName>
    <label>Working days per week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>